grammars/tree-sitter-svg/test/corpus/errors.txt
================================================================================
Invalid unquoted attribute value
:error
================================================================================

<svg width=10/>

--------------------------------------------------------------------------------



================================================================================
Invalid valueless attribute
:error
================================================================================

<svg hidden></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid XML declaration attribute order
:error
================================================================================

<?xml encoding="UTF-8" version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Invalid standalone declaration value
:error
================================================================================

<?xml version="1.0" standalone="maybe"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Mismatched end tag name
================================================================================

<svg><g></svg></g>

--------------------------------------------------------------------------------

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (element
      (start_tag
        name: (name))
      (erroneous_end_tag
        name: (name)))
    (end_tag
      name: (name)))
  (text))

================================================================================
Multiple root elements
:error
================================================================================

<svg/><svg/>

--------------------------------------------------------------------------------



================================================================================
DOCTYPE after root element
:error
================================================================================

<svg/>
<!DOCTYPE svg>

--------------------------------------------------------------------------------



================================================================================
XML declaration after root element
:error
================================================================================

<svg/>
<?xml version="1.0"?>

--------------------------------------------------------------------------------



================================================================================
Second XML declaration is invalid
:error
================================================================================

<?xml version="1.0"?>
<?xml version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Second doctype is invalid
:error
================================================================================

<!DOCTYPE svg>
<!DOCTYPE svg>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Non-svg root element
:error
================================================================================

<g/>

--------------------------------------------------------------------------------



================================================================================
DOCTYPE before XML declaration
:error
================================================================================

<!DOCTYPE svg>
<?xml version="1.0"?>
<svg/>

--------------------------------------------------------------------------------



================================================================================
Invalid viewBox value
:error
================================================================================

<svg viewBox="0 0 100"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid preserveAspectRatio value
:error
================================================================================

<svg preserveAspectRatio="xFooBar meet"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid transform function arity
:error
================================================================================

<svg transform="matrix(1 0 0 1 0)"></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid path command starts without moveto
:error
================================================================================

<svg><path d="L10 10"/></svg>

--------------------------------------------------------------------------------



================================================================================
Invalid path arc flag token
:error
================================================================================

<svg><path d="M0 0 A10 10 0 2 1 20 20"/></svg>

--------------------------------------------------------------------------------



================================================================================
Pinned recovery: feFuncR outside feComponentTransfer
================================================================================

<svg><filter><feFuncR type="linear"/></filter></svg>

--------------------------------------------------------------------------------

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (element
      (start_tag
        name: (name))
      (element
        (self_closing_tag
          name: (name)
          (generic_attribute
            name: (attribute_name)
            value: (quoted_attribute_value
              (attribute_text_double)))))
      (end_tag
        name: (name)))
    (end_tag
      name: (name)))
  (text))

================================================================================
Pinned recovery: feMergeNode outside feMerge
================================================================================

<svg><filter><feMergeNode/></filter></svg>

--------------------------------------------------------------------------------

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (element
      (start_tag
        name: (name))
      (element
        (self_closing_tag
          name: (name)))
      (end_tag
        name: (name)))
    (end_tag
      name: (name)))
  (text))

================================================================================
Pinned recovery: functional IRI rejects paint-server fallback color
:error
================================================================================

<svg><rect clip-path="url(#clip) red"/></svg>

--------------------------------------------------------------------------------



================================================================================
Pinned recovery: light source outside lighting primitive
================================================================================

<svg><filter><fePointLight/></filter></svg>

--------------------------------------------------------------------------------

(source_file
  (text)
  root: (svg_root_element
    (start_tag
      name: (name))
    (element
      (start_tag
        name: (name))
      (element
        (self_closing_tag
          name: (name)))
      (end_tag
        name: (name)))
    (end_tag
      name: (name)))
  (text))
